--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-class-component": "^8.0.0-rc.1",
+    "vue-color": "^3.3.1",
     "vue-diff": "^1.2.4",
     "vue-router": "^4.2.5"
   },
